--- a/lab67.ipynb
+++ b/lab67.ipynb
@@ -9,73 +9,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\sebas\\AppData\\Local\\Temp\\ipykernel_23672\\2134458638.py:8: DtypeWarning: Columns (3) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  books = pd.read_csv(\"./archive/Books.csv\")\n"
+      "C:\\Users\\sebas\\AppData\\Local\\Temp\\ipykernel_26580\\2816446117.py:12: DtypeWarning: Columns (3) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  books = pd.read_csv('./archive/Books.csv').sample(n=100000, random_state=42)\n"
      ]
     },
     {
-     "ename": "ValueError",
-     "evalue": "not enough values to unpack (expected 4, got 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\sebas\\Documents\\GitHub\\Laboratorio6-7-DeepLearning\\lab67.ipynb Celda 2\u001b[0m line \u001b[0;36m1\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/sebas/Documents/GitHub/Laboratorio6-7-DeepLearning/lab67.ipynb#W0sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m ratings[\u001b[39m\"\u001b[39m\u001b[39mBook-Rating\u001b[39m\u001b[39m\"\u001b[39m] \u001b[39m=\u001b[39m ratings[\u001b[39m\"\u001b[39m\u001b[39mBook-Rating\u001b[39m\u001b[39m\"\u001b[39m]\u001b[39m.\u001b[39mastype(\u001b[39m\"\u001b[39m\u001b[39mfloat32\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/sebas/Documents/GitHub/Laboratorio6-7-DeepLearning/lab67.ipynb#W0sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m \u001b[39m# Dividir los datos en conjuntos de entrenamiento, validación y prueba\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/sebas/Documents/GitHub/Laboratorio6-7-DeepLearning/lab67.ipynb#W0sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m x_train, y_train, x_test, y_test \u001b[39m=\u001b[39m train_test_split(ratings, test_size\u001b[39m=\u001b[39m\u001b[39m0.25\u001b[39m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/sebas/Documents/GitHub/Laboratorio6-7-DeepLearning/lab67.ipynb#W0sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m \u001b[39m# Convertir los datos a formato numérico\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/sebas/Documents/GitHub/Laboratorio6-7-DeepLearning/lab67.ipynb#W0sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m x_train \u001b[39m=\u001b[39m x_train\u001b[39m.\u001b[39mto_numpy()\n",
-      "\u001b[1;31mValueError\u001b[0m: not enough values to unpack (expected 4, got 2)"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n",
+      " 234/3125 [=>............................] - ETA: 7:14 - loss: 22.8762"
      ]
     }
    ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import tensorflow as tf\n",
-    "from sklearn.model_selection import train_test_split\n",
+    "import re\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "from tensorflow.keras.models import Model\n",
+    "from tensorflow.keras.layers import Input, Embedding, Flatten\n",
+    "from sklearn.metrics import mean_squared_error\n",
+    "import numpy as np\n",
     "\n",
-    "# Importar los datasets\n",
-    "ratings = pd.read_csv(\"./archive/Ratings.csv\")\n",
-    "books = pd.read_csv(\"./archive/Books.csv\")\n",
+    "# Carga los datos\n",
+    "users = pd.read_csv('./archive/Users.csv', nrows=20000)\n",
+    "books = pd.read_csv('./archive/Books.csv').sample(n=100000, random_state=42)\n",
+    "ratings = pd.read_csv('./archive/Ratings.csv').sample(n=100000, random_state=42)\n",
     "\n",
-    "# Convertir los ratings a formato numérico\n",
-    "ratings[\"Book-Rating\"] = ratings[\"Book-Rating\"].astype(\"float32\")\n",
+    "def clean_isbn(isbn):\n",
+    "    \"\"\"Elimina todos los caracteres que no sean números de la cadena ISBN.\"\"\"\n",
+    "    return re.sub(r'[^0-9]', '', isbn)\n",
     "\n",
-    "# Dividir los datos en conjuntos de entrenamiento, validación y prueba\n",
-    "(x_train, y_train), (x_test, y_test) = train_test_split(ratings, test_size=0.25)\n",
+    "books['ISBN'] = books['ISBN'].apply(clean_isbn)\n",
     "\n",
-    "# Convertir los datos a formato numérico\n",
-    "x_train = x_train.to_numpy()\n",
-    "y_train = y_train.to_numpy()\n",
-    "x_test = x_test.to_numpy()\n",
-    "y_test = y_test.to_numpy()\n",
+    "# Usar LabelEncoder para mapear 'ISBN' a valores numéricos únicos\n",
+    "isbn_encoder = LabelEncoder()\n",
+    "books['ISBN'] = isbn_encoder.fit_transform(books['ISBN'])\n",
     "\n",
-    "# Embedding layers for users and books\n",
-    "user_embedding = tf.keras.layers.Embedding(input_dim=x_train.shape[0], output_dim=64)\n",
-    "book_embedding = tf.keras.layers.Embedding(input_dim=x_train.shape[1], output_dim=64)\n",
+    "# Asegúrate de que el valor máximo sea igual o menor que el número de elementos en la capa de Embedding\n",
+    "num_books = books['ISBN'].nunique()  # Número único de libros\n",
+    "max_isbn = books['ISBN'].max()\n",
     "\n",
-    "# Dense layer for predicting ratings\n",
-    "dense = tf.keras.layers.Dense(1, activation='sigmoid')\n",
+    "users['Location'] = users['Location'].astype('category').cat.codes\n",
+    "users['Age'] = users['Age'].astype('category').cat.codes\n",
+    "books['Book-Author'] = books['Book-Author'].astype('category').cat.codes\n",
+    "books['Publisher'] = books['Publisher'].astype('category').cat.codes\n",
     "\n",
-    "# Compile the model\n",
-    "model = tf.keras.Model(inputs=[user_embedding, book_embedding], outputs=dense)\n",
-    "model.compile(optimizer='adam', loss='binary_crossentropy')\n",
+    "# Convierte la columna Year-Of-Publication a tipo int\n",
+    "books['Year-Of-Publication'] = books['Year-Of-Publication'].astype('int')\n",
     "\n",
-    "# Train the model\n",
-    "model.fit(x_train, y_train, epochs=10)\n",
+    "# Normaliza los datos\n",
+    "users['Age'] = users['Age'] / np.max(users['Age'])\n",
+    "books['Year-Of-Publication'] = books['Year-Of-Publication'] / np.max(books['Year-Of-Publication'])\n",
     "\n",
-    "# Evaluate the model\n",
-    "model.evaluate(x_test, y_test)\n",
+    "# Creando la NNRM\n",
+    "book_input = Input(shape=(1,), name='book_input')\n",
     "\n",
-    "# Make predictions\n",
-    "predictions = model.predict(x_test)\n",
+    "# Asegúrate de que 'input_dim' coincida con el número de libros únicos\n",
+    "book_embedding = Embedding(input_dim=num_books, output_dim=128, name='book_embedding')(book_input)\n",
     "\n",
-    "# Imprimir las predicciones\n",
-    "print(predictions)"
+    "# Aplana las capas de incrustación\n",
+    "book_embedding = Flatten()(book_embedding)\n",
+    "\n",
+    "# Crea el modelo\n",
+    "model = Model(inputs=[book_input], outputs=book_embedding)\n",
+    "\n",
+    "# Compila el modelo\n",
+    "model.compile(optimizer='adam', loss='mse')\n",
+    "\n",
+    "# Entrena el modelo\n",
+    "model.fit([books['ISBN'].values], ratings['Book-Rating'].values, epochs=10)\n",
+    "\n",
+    "# Realiza predicciones con el modelo\n",
+    "predicted_ratings = model.predict([books['ISBN'].values])\n",
+    "\n",
+    "# Calcula el RMSE\n",
+    "rmse = np.sqrt(mean_squared_error(ratings['Book-Rating'].values, predicted_ratings))\n",
+    "print(f'RMSE: {rmse}')\n",
+    "\n",
+    "# Enseñando el accuracy\n",
+    "print(f'Accuracy: {100 - rmse}%')"
    ]
   }
  ],
